--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,19 +14,19 @@ gates:
     lore: 'Ticket'
   lgnl:
     gate: ACACIA_FENCE_GATE
-    block: idk
+    block: IRON_BLOCK
     id: '849461'
     name: 'Subway Ticket'
     lore: 'Ticket'
   google:
     gate: ACACIA_FENCE_GATE
-    block: idk
+    block: BONE_BLOCK
     id: '521865'
     name: 'Subway Ticket'
     lore: 'Ticket'
   agent-corp:
     gate: ACACIA_FENCE_GATE
-    block: idk
+    block: GOLD_BLOCK
     id: '857630'
     name: 'Subway Ticket'
     lore: 'Ticket'
