switched jetbrains annotations' scope to "provided"

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>26.0.2</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
